# roxie_evaluator

./: README.md  build.py  pyproject.toml
cpp/: __init__.py  ctools.pxd  interface_c.pyx
cpp/c-algorithms/: analytical.cpp  analytical.h  boundary_elements.cpp  boundary_elements.h  convertors.cpp  convertors.h  ctools.cpp  ctools.h  evaluators.cpp  evaluators.h  inductance_calculation.cpp  inductance_calculation.h  mesh_tools.cpp  mesh_tools.h
cpp/c-algorithms/MLFMM/: ClusterTree.cpp  ClusterTree.hpp  ClusterTreeMemory.cpp  ClusterTreeMemory.hpp  ClusterTreeNode.cpp  ClusterTreeNode.hpp  CurlVectorDoubleLayerMonitor.cpp  CurlVectorDoubleLayerMonitor.hpp  CurlVectorSingleLayerMonitor.cpp  CurlVectorSingleLayerMonitor.hpp  MLFMM.hpp  MagneticFluxDensityMonitor.cpp  MagneticFluxDensityMonitor.hpp  MagneticVectorPotentialMonitor.cpp  MagneticVectorPotentialMonitor.hpp  MultipoleMomentContainer.cpp  MultipoleMomentContainer.hpp  VectorDoubleLayerMonitor.cpp  VectorDoubleLayerMonitor.hpp  VectorSingleLayerMonitor.cpp  VectorSingleLayerMonitor.hpp
examples/: SHiP_sc_magnet_get_map.py  plot_example_1.py  plot_example_2.py
files/SHiP/sc_magnet/: bemfem.cor  (+4 more)
files/m_113/: M113.cor  M113.ele
roxie_evaluator/: __init__.py  alignment_stage.py  b.py  boundary_element.py  c_interface.py  cpp_mod.cp311-win_amd64.pyd  eddy_ring.py  evaluator.py  filewriters.py  hall_cube.py  hall_probe.py  hexahedral_elements.py  integration_tools.py  mesh_tools.py  plot_2d.py  quad_element.py  read_cond.py  read_cor.py  read_ele.py  read_hmo.py  read_output.py  read_solution.py  tri_element.py
(+9 files in other folders)
